resources/webidl2/test/invalid/baseline/operation-too-special.txt
Syntax error at line 2, since `interface Ako`:
    getter setter void maki()
           ^ Missing return type
